diesel_compile_tests/tests/fail/derive/belongs_to_missing_parent_import.stderr
error[E0412]: cannot find type `Bar` in this scope
  --> tests/fail/derive/belongs_to_missing_parent_import.rs:12:21
   |
LL | #[diesel(belongs_to(Bar))]
   |                     ^^^ not found in this scope
For more information about this error, try `rustc --explain E0412`.
